Alejandra: se cambio config en styleInformation.css

--- a/Info.html
+++ b/Info.html
@@ -62,8 +62,8 @@
                         <h1>Fortalezas</h1>
                         <br>
                         <p><b><i>Personalización innovadora:</i></b> Ofrecemos una amplia variedad de opciones para que cada cerveza sea única</p>
-                        <p><b><i>Calidad premium:</i></b>Seleccionamos cuidadosamente los mejores ingredientes para garantizar un producto excepcional.</p>
-                        <p><b><i>Pasión por la cerveza:</i></b>Combinamos conocimientos tradicionales con técnicas modernas para crear sabores únicos.</p>
+                        <p><b><i>Calidad premium:</i></b> Seleccionamos cuidadosamente los mejores ingredientes para garantizar un producto excepcional.</p>
+                        <p><b><i>Pasión por la cerveza:</i></b> Combinamos conocimientos tradicionales con técnicas modernas para crear sabores únicos.</p>
                     </section>
                 </div>
                 
@@ -71,9 +71,9 @@
                     <section>
                         <h1>Oportunidades</h1>
                         <br>
-                        <p><b><i>Expansión internacional:</i></b>Explorar los mercados globales y llevar nuestra marca a más amantes de la cerveza.</p>
-                        <p><b><i>Tendencias emergentes:</i></b>Adaptarnos a las nuevas preferiencias del consumidor, ncluyendo opciones sin alcohol y ecológicas.</p>
-                        <p><b><i>Compromiso con la sostenibilidad:</i></b>Implementar prácticas responsables que reduzcan nuestro impacto ambiental.</p>
+                        <p><b><i>Expansión internacional: </i></b>Explorar los mercados globales y llevar nuestra marca a más amantes de la cerveza.</p>
+                        <p><b><i>Tendencias emergentes: </i></b>Adaptarnos a las nuevas preferiencias del consumidor, ncluyendo opciones sin alcohol y ecológicas.</p>
+                        <p><b><i>Compromiso con la sostenibilidad: </i></b>Implementar prácticas responsables que reduzcan nuestro impacto ambiental.</p>
                     </section>
                 </div>
             </div>
@@ -91,10 +91,10 @@
             <a href="Index.html">Volver</a>
         </div>
 
-    <!-- <div class="contenedor">
+        <div class="contenedor">
         <img class="img1" src="Recursos/suscribirse1.jpg" alt="">
         <img class="img2" src="Recursos/suscribirse2.jpg" alt="">
         <img class="img3" src="Recursos/suscribirse1.jpg" alt="">
-    </div> -->
+        </div>
 </body>
 </html>
