David: se agrego una flecha a los productos y se ajustaron las imagenes

--- a/Producto2.html
+++ b/Producto2.html
@@ -30,6 +30,9 @@
         </div>
         <div class="detallesProducto">
             <div class="sabores">
+                <a class="flecha" href="Catalogo.html">
+                    <img src="Recursos/flecha.png" alt="flecha">
+                </a>
                 <h2>Elige Dos Sabores Adicionales</h2>
                 <form>
                     <input type="checkbox" id="sabores1" name="sabores" value="Postres">
@@ -62,12 +65,8 @@
     <div class="galeria">
         <h2>Galería de Imágenes</h2>
         <div class="imagenes">
-            <div class="imagenGaleria" id="galeria-img1">
                 <img src="Recursos/chocolate2.0.jpg" alt="Cerveza de chocolate">
-            </div>
-            <div class="imagenGaleria" id="galeria-img2">
                 <img src="Recursos/chocolate3.0.jpg" alt="Cerveza de chocolate">
-            </div>
         </div>
     </div>
     <div class="opiniones">
