--- a/Producto3.html
+++ b/Producto3.html
@@ -30,6 +30,9 @@
         </div>
         <div class="detallesProducto">
             <div class="sabores">
+                <a class="flecha" href="Catalogo.html">
+                    <img src="Recursos/flecha.png" alt="flecha">
+                </a>
                 <h2>Elige Dos Sabores Adicionales</h2>
                 <form>
                     <input type="checkbox" id="sabores1" name="sabores" value="Mango">
@@ -63,7 +66,7 @@
         <div class="imagenes">
             <img src="Recursos/maracuya3.0.png" alt="Cerveza de marayucá">
             <img src="Recursos/maracuya2.0.png" alt="Cerveza de marayucá">
-        </div>
+    </div>
     <div class="opiniones">
         <h2>Opiniones de Clientes</h2>
         <div class="opinion">
