--- a/Producto1.html
+++ b/Producto1.html
@@ -30,6 +30,9 @@
         </div>
         <div class="detallesProducto">
             <div class="sabores">
+                <a class="flecha" href="Catalogo.html">
+                    <img src="Recursos/flecha.png" alt="flecha">
+                </a>
                 <h2>Elige Dos Sabores Adicionales</h2>
                 <form>
                     <input type="checkbox" id="sabores1" name="sabores" value="Chocolate negro">
@@ -62,12 +65,8 @@
     <div class="galeria">
         <h2>Galería de Imágenes</h2>
         <div class="imagenes">
-            <div class="imagenGaleria" id="galeria-img1">
                 <img src="Recursos/cofee2.0.jpg" alt="Cerveza de cafe">
-            </div>
-            <div class="imagenGaleria" id="galeria-img2">
                 <img src="Recursos/cafe3.0.jpg" alt="Cerveza de cafe">
-            </div>
         </div>
     </div>
     <div class="opiniones">
