David: se le agregaron botones y transiciones al catalogo y se ajustaron espacios

--- a/Catalogo.html
+++ b/Catalogo.html
@@ -25,13 +25,17 @@
     <section class="container">
         <h1 class ="title"> CERVEZAS ARTESANALES </h1>
         <p class=" descripcion">Explora nuestros productos destacados de cervezas artesanales de tres sabores distintos</p>
-
+<br><br>
 
         <div class ="cerveza-list">
             <div class = "cerveza-item">
                 <a href="Producto1.html">
                     <img src="recursos/chocolate.jpg" alt="primer producto" >
                 </a>
+                <div class="boton">
+                    <a href="Producto1.html">ver</a>
+                </div>
+                <br><br>
                 <h3>cerveza artesanal de cafe</h3>
                 <p>Una cerveza artesanal de café es una bebida que combina lo mejor de la cerveza y el café, creando
                     una experiencia intensa y compleja en sabor y aroma. Generalmente, se elabora con maltas oscuras
@@ -46,6 +50,10 @@
             <a href="Producto2.html">
                 <img src="recursos/cumbres-cafe.jpg" alt="segundo  producto" >
             </a>
+            <div class="boton">
+                <a href="Producto1.html">ver</a>
+            </div>
+            <br><br>
             <h3>cerveza artesanal de chocolate</h3>
             <p>Una cerveza artesanal de chocolate es una bebida oscura y sedosa con intensas notas de cacao 
             y malta tostada. Su sabor combina dulzura y amargor equilibrado, con toques de vainilla, café y caramelo. 
@@ -58,6 +66,10 @@
             <a href="Producto3.html">
                 <img src="recursos/maracuya.jpg" alt="tercer producto" >
             </a>
+            <div class="boton">
+                <a href="Producto1.html">ver</a>
+            </div>
+            <br><br>
             <h3>cerveza artesanal de maracuya</h3>
             <p>Una cerveza artesanal de maracuyá es una bebida refrescante y exótica que fusiona el carácter artesanal 
                 de la cerveza con el vibrante sabor tropical del maracuyá. 
