David: se agrego animacion a los 3 productos y a index

--- a/Producto1.html
+++ b/Producto1.html
@@ -23,59 +23,61 @@
             <a href="inicioSesion.html">Iniciar Sesion</a>
         </div>
     </div>
-    <div class="producto">
-        <div class="imagenProducto">
-            <h1>Cerveza de cafe</h1>
-            <img src="Recursos/chocolate.jpg" alt="Cerveza de cafe">
-        </div>
-        <div class="detallesProducto">
-            <div class="sabores">
-                <a class="flecha" href="Catalogo.html">
-                    <img src="Recursos/flecha.png" alt="flecha">
-                </a>
-                <h2>Elige Dos Sabores Adicionales</h2>
-                <form>
-                    <input type="checkbox" id="sabores1" name="sabores" value="Chocolate negro">
-                    <label for="sabores1">chocolate negro</label><br>
-                    <input type="checkbox" id="sabores2" name="sabores" value="Vainilla">
-                    <label for="sabores2">Vainilla</label><br>
-                    <input type="checkbox" id="sabores3" name="sabores" value="Frutos secos">
-                    <label for="sabores3">Frutos secos</label><br>
-                    <input type="checkbox" id="sabores4" name="sabores" value="chocolate blanco">
-                    <label for="sabores4">chocolate blanco</label><br>
-                </form>
+    <div class="cuerpo">
+        <div class="producto">
+            <div class="imagenProducto">
+                <h1>Cerveza de cafe</h1>
+                <img src="Recursos/chocolate.jpg" alt="Cerveza de cafe">
             </div>
+            <div class="detallesProducto">
+                <div class="sabores">
+                    <a class="flecha" href="Catalogo.html">
+                        <img src="Recursos/flecha.png" alt="flecha">
+                    </a>
+                    <h2>Elige Dos Sabores Adicionales</h2>
+                    <form>
+                        <input type="checkbox" id="sabores1" name="sabores" value="Chocolate negro">
+                        <label for="sabores1">chocolate negro</label><br>
+                        <input type="checkbox" id="sabores2" name="sabores" value="Vainilla">
+                        <label for="sabores2">Vainilla</label><br>
+                        <input type="checkbox" id="sabores3" name="sabores" value="Frutos secos">
+                        <label for="sabores3">Frutos secos</label><br>
+                        <input type="checkbox" id="sabores4" name="sabores" value="chocolate blanco">
+                        <label for="sabores4">chocolate blanco</label><br>
+                    </form>
+                </div>
 
-            <div class="especificaciones">
-                <h2>Especificaciones del Producto</h2>
-                <ul>
-                    <li>Volumen: 500 ml</li>
-                    <li>Alcohol: 5.5%</li>
-                    <li>Ingredientes: Agua, cebada, lúpulo, cafe</li>
-                </ul>
+                <div class="especificaciones">
+                    <h2>Especificaciones del Producto</h2>
+                    <ul>
+                        <li>Volumen: 500 ml</li>
+                        <li>Alcohol: 5.5%</li>
+                        <li>Ingredientes: Agua, cebada, lúpulo, cafe</li>
+                    </ul>
+                </div>
+                <p>Descripción del producto: Una cerveza artesanal <br> de café es una bebida innovadora que fusiona dos mundos intensos.</p>
+                <p>Precio: $10000 COP</p>
+                <br>
+                <button class="botonCompra">Comprar</button>
             </div>
-            <p>Descripción del producto: Una cerveza artesanal <br> de café es una bebida innovadora que fusiona dos mundos intensos.</p>
-            <p>Precio: $10000 COP</p>
-            <br>
-            <button class="botonCompra">Comprar</button>
         </div>
-    </div>
-    </div>
-    
-    <div class="galeria">
-        <h2>Galería de Imágenes</h2>
-        <div class="imagenes">
-                <img src="Recursos/cofee2.0.jpg" alt="Cerveza de cafe">
-                <img src="Recursos/cafe3.0.jpg" alt="Cerveza de cafe">
         </div>
-    </div>
-    <div class="opiniones">
-        <h2>Opiniones de Clientes</h2>
-        <div class="opinion">
-            <p><strong>Juan Pérez:</strong> Excelente cerveza, me encantó el sabor y la frescura. ¡La recomiendo!</p>
+        
+        <div class="galeria">
+            <h2>Galería de Imágenes</h2>
+            <div class="imagenes">
+                    <img src="Recursos/cofee2.0.jpg" alt="Cerveza de cafe">
+                    <img src="Recursos/cafe3.0.jpg" alt="Cerveza de cafe">
+            </div>
         </div>
-        <div class="opinion">
-            <p><strong>María Rodríguez:</strong> Me gustó mucho, perfecta para disfrutar con amigos.</p>
+        <div class="opiniones">
+            <h2>Opiniones de Clientes</h2>
+            <div class="opinion">
+                <p><strong>Juan Pérez:</strong> Excelente cerveza, me encantó el sabor y la frescura. ¡La recomiendo!</p>
+            </div>
+            <div class="opinion">
+                <p><strong>María Rodríguez:</strong> Me gustó mucho, perfecta para disfrutar con amigos.</p>
+            </div>
         </div>
     </div>
     <footer>
