--- a/Producto3.html
+++ b/Producto3.html
@@ -23,57 +23,58 @@
             <a href="inicioSesion.html">Iniciar Sesion</a>
         </div>
     </div>
-    <div class="producto">
-        <div class="imagenProducto">
-            <h1>Cerveza de marayucá</h1>
-            <img src="Recursos/maracuya.jpg" alt="Cerveza de marayucá">
-        </div>
-        <div class="detallesProducto">
-            <div class="sabores">
-                <a class="flecha" href="Catalogo.html">
-                    <img src="Recursos/flecha.png" alt="flecha">
-                </a>
-                <h2>Elige Dos Sabores Adicionales</h2>
-                <form>
-                    <input type="checkbox" id="sabores1" name="sabores" value="Mango">
-                    <label for="sabores1">Mango</label><br>
-                    <input type="checkbox" id="sabores2" name="sabores" value="Limón">
-                    <label for="sabores2">Limón</label><br>
-                    <input type="checkbox" id="sabores3" name="sabores" value="Maracuyá">
-                    <label for="sabores3">Fresa</label><br>
-                    <input type="checkbox" id="sabores4" name="sabores" value="Piña">
-                    <label for="sabores4">Piña</label><br>
-                </form>
+    <div class="cuerpo">
+        <div class="producto">
+            <div class="imagenProducto">
+                <h1>Cerveza de marayucá</h1>
+                <img src="Recursos/maracuya.jpg" alt="Cerveza de marayucá">
             </div>
-
-            <div class="especificaciones">
-                <h2>Especificaciones del Producto</h2>
-                <ul>
-                    <li>Volumen: 500 ml</li>
-                    <li>Alcohol: 5.5%</li>
-                    <li>Ingredientes: Agua, cebada, lúpulo, marayucá</li>
-                </ul>
+            <div class="detallesProducto">
+                <div class="sabores">
+                    <a class="flecha" href="Catalogo.html">
+                        <img src="Recursos/flecha.png" alt="flecha">
+                    </a>
+                    <h2>Elige Dos Sabores Adicionales</h2>
+                    <form>
+                        <input type="checkbox" id="sabores1" name="sabores" value="Mango">
+                        <label for="sabores1">Mango</label><br>
+                        <input type="checkbox" id="sabores2" name="sabores" value="Limón">
+                        <label for="sabores2">Limón</label><br>
+                        <input type="checkbox" id="sabores3" name="sabores" value="Maracuyá">
+                        <label for="sabores3">Fresa</label><br>
+                        <input type="checkbox" id="sabores4" name="sabores" value="Piña">
+                        <label for="sabores4">Piña</label><br>
+                    </form>
+                </div>
+                <div class="especificaciones">
+                    <h2>Especificaciones del Producto</h2>
+                    <ul>
+                        <li>Volumen: 500 ml</li>
+                        <li>Alcohol: 5.5%</li>
+                        <li>Ingredientes: Agua, cebada, lúpulo, marayucá</li>
+                    </ul>
+                </div>
+                <p>Descripción del producto: Una cerveza artesanal <br> de marayucá con un sabor único y refrescante.</p>
+                <p>Precio: $10000 COP</p>
+                <br>
+                <button class="botonCompra">Comprar</button>
             </div>
-            <p>Descripción del producto: Una cerveza artesanal <br> de marayucá con un sabor único y refrescante.</p>
-            <p>Precio: $10000 COP</p>
-            <br>
-            <button class="botonCompra">Comprar</button>
         </div>
-    </div>
 
-    <div class="galeria">
-        <h2>Galería de Imágenes</h2>
-        <div class="imagenes">
-            <img src="Recursos/maracuya3.0.png" alt="Cerveza de marayucá">
-            <img src="Recursos/maracuya2.0.png" alt="Cerveza de marayucá">
-    </div>
-    <div class="opiniones">
-        <h2>Opiniones de Clientes</h2>
-        <div class="opinion">
-            <p><strong>Juan Pérez:</strong> Excelente cerveza, me encantó el sabor y la frescura. ¡La recomiendo!</p>
+        <div class="galeria">
+            <h2>Galería de Imágenes</h2>
+            <div class="imagenes">
+                <img src="Recursos/maracuya3.0.png" alt="Cerveza de marayucá">
+                <img src="Recursos/maracuya2.0.png" alt="Cerveza de marayucá">
         </div>
-        <div class="opinion">
-            <p><strong>María Rodríguez:</strong> Me gustó mucho, perfecta para disfrutar con amigos.</p>
+        <div class="opiniones">
+            <h2>Opiniones de Clientes</h2>
+            <div class="opinion">
+                <p><strong>Juan Pérez:</strong> Excelente cerveza, me encantó el sabor y la frescura. ¡La recomiendo!</p>
+            </div>
+            <div class="opinion">
+                <p><strong>María Rodríguez:</strong> Me gustó mucho, perfecta para disfrutar con amigos.</p>
+            </div>
         </div>
     </div>
     <footer>
