David: se creo la estructura del footer (falta la informacion de contacto con sus iconos

--- a/Catalogo.html
+++ b/Catalogo.html
@@ -80,8 +80,14 @@
                
         </div>
         <button class ="info-bot">MAS INFORMACIÓN</button>
-        
-
     </section>
+    <br><br><br><br><br>
+    <footer>
+        <div class="imagen">
+            <a href="index.html">
+                <img src="Recursos/Logo.png" alt="Logo">
+            </a>
+        <p>&copy; Chevera - Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
