--- a/Formulario.html
+++ b/Formulario.html
@@ -91,5 +91,12 @@
         <input type="hidden" name="cod" value="123">
     </div>
     <br><br><br><br><br>
+    <footer>
+        <div class="imagen">
+            <a href="index.html">
+                <img src="Recursos/Logo.png" alt="Logo">
+            </a>
+        <p>&copy; Chevera - Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
