--- a/Info.html
+++ b/Info.html
@@ -84,7 +84,6 @@
                         <h2>Según la asociación de cerveceros, el número de cervecerías artesanales en los Estados Unidos aumentó el 8.6 en 2021 respecto al año 2020</h2>
                     </aside>
                 </div>
-                    
             <div class="contenedor">
             <img class="img1" src="Recursos/suscribirse1.jpg" alt="">
             <img class="img2" src="Recursos/suscribirse2.jpg" alt="">
@@ -92,5 +91,13 @@
             </div>
         </div>
     </div>
+    <br><br><br><br><br>
+    <footer>
+        <div class="imagen">
+            <a href="index.html">
+                <img src="Recursos/Logo.png" alt="Logo">
+            </a>
+        <p>&copy; Chevera - Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
