--- a/Index.html
+++ b/Index.html
@@ -78,5 +78,12 @@
             </div>
         </main>
     </div>
+    <footer>
+        <div class="imagen">
+            <a href="index.html">
+                <img src="Recursos/Logo.png" alt="Logo">
+            </a>
+        <p>&copy; Chevera - Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
