Alejandra: Se cambiaron imagenes en info.htmly se realizaron cambios en styleInformation.css como tamaño de letra y algunos colores.

--- a/Info.html
+++ b/Info.html
@@ -30,7 +30,7 @@
         </header>
         <div class="cuerpo">
             <div class="introduction">
-                <img src="Recursos/friends.jpg" alt="friends">
+                <img src="Recursos/chevera.png" alt="Introduction">
                 <section>
                     <p>En <b>Chevera</b>, creemos que cada cerveza es más que una bebida.</p>
                     <p>Es una experiencia única que merece ser disfrutada con autenticidad y estilo. Por eso, ofrecemos un servicio exclusivo de suscripción y personalización de cerveza, pensado para aquellos amantes de la cerveza que valoran la calidad, la originalidad y la individualidad.</p>
@@ -38,20 +38,21 @@
                 </section>
             </div>
             <div class="history">
-                <h2><i>Sobre nuestra empresa</i></h2>
-                <img src="Recursos/production.jpg" alt="beer production">
+                <h2>Sobre nuestra empresa</h2>
+                <img src="Recursos/empresa.png" alt="Empresa">
                 <p>Fundada en 2023,<b>Chevera</b> nace en el corazón de Colombia con una visión clara: combinar la riqueza de la tradición cervecera con la innovación moderna. Creemos que cada cerveza cuenta una historia y queremos que la tuya sea única. Por eso, ofrecemos un servicio de personalización exclusivo,
-                -desde la selección de ingredientes hasta el diseño de la etiqueta- refleja la identidad y los gustos de nuestros clientes. Nos apasiona transformar el simple acto de beber cerveza en una experiencia inolvidable.</p>
+                -desde la selección de ingredientes hasta el diseño de la etiqueta- refleja la identidad y los gustos de nuestros clientes.</p>
+                <p><b><i>Nos apasiona transformar el simple acto de beber cerveza en una experiencia inolvidable.</i></b></p>
             </div>
             <div class="mission">
-                <img src="Recursos/mision.jpg" alt="mision de la empresa">
+                <img src="Recursos/maracuya2.0.png" alt="mision de la empresa">
                 <section>
                     <h2>Misión</h2>
                     <p>En <b>Chevera</b>,buscamos enriquecer la cultura cervecera ofreciendo experiencias de alta calidad, personalizadas y adaptadas a cada cliente. Más que vender cerveza, creamos momentos especiales y bebidas únicas que representan la esencia de cada persona.</p>
                 </section>
             </div>
             <div class="vision">
-                <img src="Recursos/vision.jpg" alt="vision de la empresa">
+                <img src="Recursos/imag.jpg" alt="vision de la empresa">
                 <section>
                     <h2>Visión</h2>
                     <p>Queremos ser reconocidos como líderes en el mercado de cervezas artesanales personalizadas, expandiendo nuestra marca a nivel internacional. Nos esforzamos por innovar constantemente y contribuir a un futuro más sostenible, promoviendo prácticas responsables en cada etapa de nuestra producción.</p>
@@ -63,9 +64,9 @@
                         <section>
                             <h1>Fortalezas</h1>
                             <br>
-                            <p><b><i>Personalización innovadora:</i></b> Ofrecemos una amplia variedad de opciones para que cada cerveza sea única</p>
-                            <p><b><i>Calidad premium:</i></b> Seleccionamos cuidadosamente los mejores ingredientes para garantizar un producto excepcional.</p>
-                            <p><b><i>Pasión por la cerveza:</i></b> Combinamos conocimientos tradicionales con técnicas modernas para crear sabores únicos.</p>
+                            <p><i>Personalización innovadora:</i>Ofrecemos una amplia variedad de opciones para que cada cerveza sea única</p>
+                            <p><i>Calidad premium:</i>Seleccionamos cuidadosamente los mejores ingredientes para garantizar un producto excepcional.</p>
+                            <p><i>Pasión por la cerveza:</i>Combinamos conocimientos tradicionales con técnicas modernas para crear sabores únicos.</p>
                         </section>
                     </div>
                     
@@ -73,31 +74,12 @@
                         <section>
                             <h1>Oportunidades</h1>
                             <br>
-                            <p><b><i>Expansión internacional: </i></b>Explorar los mercados globales y llevar nuestra marca a más amantes de la cerveza.</p>
-                            <p><b><i>Tendencias emergentes: </i></b>Adaptarnos a las nuevas preferiencias del consumidor, ncluyendo opciones sin alcohol y ecológicas.</p>
-                            <p><b><i>Compromiso con la sostenibilidad: </i></b>Implementar prácticas responsables que reduzcan nuestro impacto ambiental.</p>
+                            <p><i>Expansión internacional: </i>Explorar los mercados globales y llevar nuestra marca a más amantes de la cerveza.</p>
+                            <p><i>Tendencias emergentes: </i>Adaptarnos a las nuevas preferiencias del consumidor, ncluyendo opciones sin alcohol y ecológicas.</p>
+                            <p><i>Compromiso con la sostenibilidad: </i>Implementar prácticas responsables que reduzcan nuestro impacto ambiental.</p>
                         </section>
                     </div>
+                    <br>
                 </div>
-                <div class="infoComplementaria">
-                    <aside>
-                        <h2>Según la asociación de cerveceros, el número de cervecerías artesanales en los Estados Unidos aumentó el 8.6 en 2021 respecto al año 2020</h2>
-                    </aside>
-                </div>
-            <div class="contenedor">
-            <img class="img1" src="Recursos/suscribirse1.jpg" alt="">
-            <img class="img2" src="Recursos/suscribirse2.jpg" alt="">
-            <img class="img3" src="Recursos/suscribirse1.jpg" alt="">
-            </div>
-        </div>
-    </div>
-    <br><br><br><br><br>
-    <footer>
-        <div class="imagen">
-            <a href="index.html">
-                <img src="Recursos/Logo.png" alt="Logo">
-            </a>
-        <p>&copy; Chevera - Todos los derechos reservados</p>
-    </footer>
 </body>
 </html>
