valerin: arreglos finales

--- a/Info.html
+++ b/Info.html
@@ -81,5 +81,15 @@
                     </div>
                     <br>
                 </div>
+                <footer>
+                    <div class="imagen">
+                        <a href="index.html">
+                            <img src="Recursos/Logo.png" alt="Logo">
+                        </a>
+                         <p>&copy; Chevera - Todos los derechos reservados</p>
+                        <p>Teléfono:  (+57 1) 123 4567</p>
+                        <p>Dirección: Calle 20 #10-15., Tunja, Boyacá, Colombia</p>
+                    </div>
+                </footer>
 </body>
 </html>
