--- a/Producto1.html
+++ b/Producto1.html
@@ -85,7 +85,10 @@
             <a href="index.html">
                 <img src="Recursos/Logo.png" alt="Logo">
             </a>
-        <p>&copy; Chevera - Todos los derechos reservados</p>
+            <p>&copy; Chevera - Todos los derechos reservados</p>
+            <p>Teléfono:  (+57 1) 123 4567</p>
+            <p>Dirección: Calle 20 #10-15., Tunja, Boyacá, Colombia</p>
+        </div>
     </footer>
 </body>
 </html>
