Alejandra: se finalizó la estructura info.html y styleInformation.css, se agregó íconos en el footer

--- a/Formulario.html
+++ b/Formulario.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="CSS/styleFormulario.css">
     <link rel="icon" href="Recursos/Logo.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>Regístrate</title>
 </head>
 <body>
@@ -99,6 +100,12 @@
              <p>&copy; Chevera - Todos los derechos reservados</p>
             <p>Teléfono:  (+57 1) 123 4567</p>
             <p>Dirección: Calle 20 #10-15., Tunja, Boyacá, Colombia</p>
+        </div>
+        <div class="redes">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-x-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-whatsapp"></i></a>
         </div>
     </footer>
 </body>
