--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="Recursos/Logo.ico">
     <link rel="stylesheet" href="CSS/styleIndex.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>Cerveza artesanal</title>
 
 </head>
@@ -59,7 +59,7 @@
                 <img src="Recursos/suscripcion.jpg" alt="">
                 <p>Descubre un mundo de sabores con nuestra exclusiva suscripción de cerveza. Cada mes, recibe
                      una selección cuidadosamente curada de cervezas artesanales de las mejores cervecerías, locales e internacionales. 
-                    Desde refrescantes cereveza artesanal, cada envío es una aventura para tu paladar.</p>
+                    Desde refrescantes cerveza artesanal, cada envío es una aventura para tu paladar.</p>
             </div>
         
             <div class="item">
@@ -86,6 +86,12 @@
              <p>&copy; Chevera - Todos los derechos reservados</p>
             <p>Teléfono:  (+57 1) 123 4567</p>
             <p>Dirección: Calle 20 #10-15., Tunja, Boyacá, Colombia</p>
+        </div>
+        <div class="redes">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-x-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-whatsapp"></i></a>
         </div>
     </footer>
 </body>
