--- a/Catalogo.html
+++ b/Catalogo.html
@@ -5,6 +5,7 @@
     <title>Catalogo de productos</title>
     <link rel="stylesheet" href="CSS/catalogo.css">
     <link rel="icon" href="Recursos/Logo.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
     <div class="menu">
@@ -90,6 +91,12 @@
             <p>&copy; Chevera - Todos los derechos reservados</p>
             <p>Teléfono:  (+57 1) 123 4567</p>
             <p>Dirección: Calle 20 #10-15., Tunja, Boyacá, Colombia</p>
+        </div>
+        <div class="redes">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-x-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-whatsapp"></i></a>
         </div>
     </footer>
 </body>
