--- a/Producto2.html
+++ b/Producto2.html
@@ -27,7 +27,7 @@
     <div class="cuerpo">
         <div class="producto">
             <div class="imagenProducto">
-                <h1>Cerveza de cafe</h1>
+                <h1>Cerveza de chocolate</h1>
                 <img src="Recursos/cumbres-cafe.jpg" alt="Cerveza de cafe">
             </div>
             <div class="detallesProducto">
@@ -83,18 +83,18 @@
     </div>
     <footer>
         <div class="imagen">
+            <br>
             <a href="index.html">
                 <img src="Recursos/Logo.png" alt="Logo">
             </a>
             <p>&copy; Chevera - Todos los derechos reservados</p>
             <p>Teléfono:  (+57 1) 123 4567</p>
             <p>Dirección: Calle 20 #10-15., Tunja, Boyacá, Colombia</p>
-        </div>
-        <div class="redes">
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-x-twitter"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-whatsapp"></i></a>
+            <br><br>
         </div>
     </footer>
 </body>
